# QSuperMacros

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakelists.txt  QQmlAutoPropertyHelpers.h  QQmlConstRefPropertyHelpers.h  QQmlEnumClassHelper.h  QQmlHelpers.cpp  QQmlListPropertyHelper.h  QQmlPtrPropertyHelpers.h  QQmlSingletonHelper.h  QQmlVarPropertyHelpers.h  QtSuperMacros.pri  QtSuperMacros.qbs  README.md
cmake/: BuildDoxygenBt.cmake  BuildQSuperMacro.cmake
src/: QJsonImportExport.cpp  QJsonImportExport.h  QQmlAutoPropertyHelpers.h  QQmlConstRefPropertyHelpers.h  QQmlEnumClassHelper.h  QQmlHelpersCommon.h  QQmlListPropertyHelper.h  QQmlPtrPropertyHelpers.h  QQmlSingletonHelper.h  QQmlVarPropertyHelpers.h  QSuperMacros.cpp  QSuperMacros.h
